# taproot

./: README.md  pyproject.toml
.github/: dependabot.yml
taproot/: __init__.py  aws.py  cache.py  cli.py  main.py  tui.py
