[tool.poetry]
name = "taproot"
version = "0.7.0"
description = "TUI helper for AWS EC2 Instance Connect"
authors = ["Citizen Observer"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "*"
botocore = "*"
inquirerpy = "*"
typer = {extras = ["all"], version = "*"}
rich = "*"
humanize = "*"
python-dateutil = "*"
appdirs = "*"

[tool.poetry.scripts]
taproot = "taproot.cli:app"
